nova versao, modificado na webconf

--- a/modelo_projeto.tex
+++ b/modelo_projeto.tex
@@ -96,7 +96,7 @@
 %% ====================================
 %% ====================================
 
-\title{Modelo para Projeto de cabeamento estruturado}					% Title of your article goes here
+\title{Projeto de cabeamento 2017}					% Title of your article goes here
 
 %% ====================================
 
