--- a/tab2.tex
+++ b/tab2.tex
@@ -1,6 +1,6 @@
 \begin{table}[h!] % coloque h! para forcar a posicao
 \centering
-\caption{Modifique a legenda e crie um label}
+\caption{Orçamento}
 \label{tab2} %com este label vc faz referencia no texto
 \begin{tabular}{|l|l|l|l|l|}
 \hline
